syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";

service ClientInfoService {
  rpc ListClients (google.protobuf.Empty) returns (ListClientsReply) {}
}

message ListClientsReply {
  repeated ClientInfo clients = 1;
}

message ClientInfo {
  uint64 client_id = 1;
  string user = 2;
  string dbname = 3;
  string dsname = 4;
  repeated UsedShardInfo shards = 5;
}

message UsedShardInfo {
    DBInstaceInfo instance = 1;
}

message DBInstaceInfo {
    string hostname = 1;
}
