syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "protos/qualified_name.proto";

message TypedColRef {
  string columnName = 1;
  string columnType = 2;
}

message RoutingExpr {
  repeated TypedColRef colRefs = 1;
}

message DistributionKeyEntry {
  string column = 1;
  string hashFunction = 2;
  RoutingExpr Expr = 3;
}

message DistributedRelation {
  string name = 1;
  repeated DistributionKeyEntry distributionKey = 2;
  bool ReplicatedRelation = 3;
  map<string, string> sequenceColumns = 4;
  string schema_name = 5;
}

message Distribution {
  string id = 1;
  repeated string ColumnTypes = 2;
  repeated DistributedRelation relations = 3;
  repeated UniqueIndex uniqueIndexes = 4;
}

message UniqueIndex {
  string id = 1;
  QualifiedName tableName = 2;
  string colName = 3;
}